styles/responsive/customRes.css
/* ... */
/* Tablet Layout: 768px. */
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .videoContent {
    position: relative;
  }
  .feature-one__single {
    flex: 0 0 50%;
    max-width: 50%;
    margin-bottom: 24px;
  }

  .feature-one__icon {
    position: relative;
    top: 0;
  }

  .feature-one__inner {
    padding: 88px 0 50px;
  }

  .leading-waste__left {
    max-width: 600px;
    margin: 0 auto;
  }

  .leading-waste__right {
    max-width: 600px;
    margin: 50px auto 0;
  }

  .we-dedicated__left {
    max-width: 600px;
    margin: 0 auto;
  }

  .we-dedicated__right {
    max-width: 600px;
    margin: 100px auto 0;
  }

  .services-one__top-left .section-title {
    margin-bottom: 37px;
  }

  .services-one__top-text {
    margin-top: 0;
    margin-bottom: 50px;
  }

  .have-waste__inner {
    padding-left: 80px;
    padding-right: 80px;
    flex-direction: column;
  }

  .have-waste__icon {
    margin-left: 0;
  }

  .have-waste__left {
    flex-direction: column;
  }

  .project-one__title {
    font-size: 32px;
  }

  .testimonial-one__left {
    margin-bottom: 50px;
  }

  .site-footer__top-inner {
    flex-direction: column;
    text-align: center;
    justify-content: center;
  }

  .site-footer__top-right {
    flex-direction: column;
  }

  .site-footer__social {
    margin-left: 0;
  }

  .site-footer__social:before {
    display: none;
  }

  .site-footer__top-right-text {
    padding-top: 9px;
    padding-bottom: 9px;
  }

  .footer-widget__about {
    margin-right: 0;
  }

  .footer-widget__services {
    margin-right: 0;
    margin-top: 35px;
  }

  .footer-widget__contact {
    margin-top: 35px;
  }

  .industries-two__top-left .section-title {
    margin-bottom: 37px;
  }

  .industries-two__top-right {
    margin-bottom: 50px;
  }

  .why-choose-one__left {
    max-width: 600px;
    margin: 0 auto;
  }

  .why-choose-one__right {
    max-width: 600px;
    margin: 0 auto 0;
  }

  .why-choose-one__content {
    padding: 94px 90px 95px;
    margin-top: 50px;
  }

  .testimonial-two__left {
    margin-bottom: 50px;
  }

  .contact-one__left {
    margin-right: 0;
  }

  .contact-one__right {
    margin-left: 0;
    margin-top: 50px;
  }

  .cta-one__inner {
    flex-direction: column;
    text-align: center;
  }

  .cta-one__btn-box {
    margin-top: 20px;
  }

  .pricing__tab-content-single {
    padding-right: 29px;
    padding-bottom: 30px;
    flex-direction: column;
    align-items: baseline;
  }

  .pricing__tab-content-order {
    padding-top: 23px;
    margin-left: 30px;
  }

  .pricing__tab-content-order:before {
    top: 0px;
    left: -30px;
    bottom: -30px;
  }

  .news-three__text {
    margin-bottom: 155px;
  }

  .news-three__carousel.owl-theme .owl-nav {
    bottom: inherit;
    left: 0;
    top: -115px;
  }

  .always-working__left {
    max-width: 600px;
    margin: 0 auto 0;
  }

  .always-working__right {
    max-width: 600px;
    margin: 68px auto 0;
  }

  .service-details__benefits-right {
    margin-top: 25px;
  }

  .service-details__left {
    margin-bottom: 50px;
  }

  .industries-one__content {
    padding: 86px 35px 50px;
  }

  .wostin-for-bob__left .section-title {
    margin-bottom: 38px;
  }

  .wostin-for-bob__content {
    margin-bottom: 50px;
  }

  .projects-page .project-one__content {
    padding: 19px 20px 27px;
    margin-left: 20px;
    margin-right: 20px;
  }

  .project-details__details {
    padding: 31px 20px 37px;
  }

  .project-details__details li + li {
    margin-left: 20px;
  }

  .project-details__details li:before {
    display: none;
  }

  .team-details__top {
    padding: 120px 0 109px;
  }

  .team-details__top-right {
    margin-left: 0;
  }

  .team-details__top-content {
    margin-top: 41px;
  }

  .team-details__bottom-right {
    margin-left: 0;
    margin-top: 28px;
  }

  .testimonials-page .testimonial-two__single {
    padding: 43px 30px 67px;
  }

  .faq-icon__list li + li {
    margin-left: 10px;
  }

  .faq-waste-pickup__banner {
    margin-top: 50px;
  }

  .faq-waste-pickup__banner-car {
    right: 0;
  }

  .error-page-shape {
    left: 54.5%;
  }

  .news-details__pagenation li + li {
    margin-left: 0;
    margin-top: 30px;
  }

  .careerHeaderDiv {
    padding: 30px 50px;
  }
}
/* ... */

